--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,10 @@ tasks.withType(FindBugs) {
     }
 }
 findbugs {
-    ignoreFailures = true
+    toolVersion = "3.0.1"
+    effort = 'max'
+    reportLevel = 'high'
+    ignoreFailures = false
 }
 
 jacocoTestReport {
