--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'org.owasp:dependency-check-gradle:3.0.1'
+    }
+}
+
 plugins {
     id "com.jfrog.bintray" version "1.1"
     id "com.github.jruby-gradle.base" version "0.1.5"
@@ -7,6 +17,9 @@ plugins {
     id "jacoco"
     id "pmd"
 }
+
+apply plugin: 'org.owasp.dependencycheck'
+
 import com.github.jrubygradle.JRubyExec
 repositories {
     mavenCentral()
