Use Java8 because Embulk 0.9.x no longer supports Java7

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
-jdk: oraclejdk8 # Use oraclejdk8 because checkstyle jar is compiled by jdk8 but, released plugin is still built by oraclejdk7.
+jdk: openjdk8
 script:
 - ./gradlew --info check
 after_success:
